# libShabal

./: .gitmodules  .travis.yml  Cargo.toml  build.rs  build.sh
src/: curve25519.rs  curve_api.rs  lib.rs  shabal.rs  simd.rs
src/c/: curve25519.c  curve25519.h
src/pocc/: LICENSE  README.md  mod.rs  plot.rs  shabal256_fast.rs
src/pocc/c/: common.c  noncegen_128_avx.c  noncegen_128_avx.h  noncegen_128_sse2.c  noncegen_128_sse2.h  noncegen_256_avx2.c  noncegen_256_avx2.h  noncegen_512_avx512f.c  noncegen_512_avx512f.h
