[package]
name = "libshabal"
version = "1.2.0"
authors = ["Harry Phillips <harryjamesphillips@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "shabal"
crate-type = ["cdylib"]

[features]
simd = []
neon = []

[dependencies]
libc = "0.2.66"
cfg-if = "0.1.10"
hex = "0.4.0"
shabal = "0.2.0"

[build-dependencies]
cc = "1.0.48"
cfg-if = "0.1.10"
cbindgen = "0.12.1"
