[package]
name = "libshabal"
version = "1.4.1"
authors = ["Harry Phillips <harryjamesphillips@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "shabal"
crate-type = ["cdylib"]

[features]
simd = []
neon = []

[dependencies]
libc = "0.2.66"
cfg-if = "0.1.10"
shabal = "0.2.0"
once_cell = "1.3.1"
sha2 = "0.8.1"

[build-dependencies]
cc = "1.0.50"
cfg-if = "0.1.10"
cbindgen = "0.13.1"
